made about section responsive

--- a/src/Components/Styles/AboutSection.module.css
+++ b/src/Components/Styles/AboutSection.module.css
@@ -40,3 +40,15 @@
   background-color: rgb(194, 195, 201);
   border-radius: 10px;
 }
+@media only screen and (max-width: 800px) {
+  .mainCont {
+    display: flex;
+    flex-direction: column;
+  }
+  .mainCont > div {
+    text-align: center !important;
+  }
+  .profilePicCont {
+    padding: 30px;
+  }
+}
