little fix in skill section

--- a/src/Components/Styles/SkillsSection.module.css
+++ b/src/Components/Styles/SkillsSection.module.css
@@ -40,6 +40,7 @@
 @media only screen and (max-width: 800px) {
   .rootCont {
     height: 140vh;
+    padding-bottom: 5vh;
   }
   .skillsCont {
     grid-template-columns: repeat(2, 50%);
