--- a/src/Components/Styles/AboutSection.module.css
+++ b/src/Components/Styles/AboutSection.module.css
@@ -9,10 +9,17 @@
   padding-bottom: 10vh;
 }
 .rootCont h1 {
-  color: rgb(64, 112, 244);
-  border-bottom: 3px solid rgb(64, 112, 244);
+  /* color: rgb(64, 112, 244); */
+  /* border-bottom: 3px solid rgb(64, 112, 244); */
+  /* color: rgb(8, 111, 143); */
+  color: rgb(0, 49, 64);
+  /* border-bottom: 3px solid rgb(8, 111, 143); */
   width: 95px;
   margin: 0 auto;
+}
+.rootCont > p {
+  font-size: 40px;
+  font-weight: 400;
 }
 .mainCont {
   display: grid;
@@ -30,6 +37,9 @@
 .mainCont > div > h2 {
   margin: 0px;
 }
+/* .mainCont > div > h2 > span {
+  color: rgb(8, 111, 143);
+} */
 .profilePicCont {
   /* background-color: rgb(194, 195, 201); */
 }
