--- a/src/Components/Styles/SkillsSection.module.css
+++ b/src/Components/Styles/SkillsSection.module.css
@@ -7,15 +7,23 @@
   /* align-items: center; */
   justify-content: space-around;
   padding-bottom: 10vh;
+  text-align: center;
 }
 
 .rootCont h1 {
-  color: rgb(64, 112, 244);
-  border-bottom: 3px solid rgb(64, 112, 244);
-  width: 70px;
+  /* color: rgb(64, 112, 244); */
+  /* border-bottom: 3px solid rgb(64, 112, 244); */
+  /* color: rgb(8, 111, 143); */
+  color: rgb(0, 49, 64);
+  /* border-bottom: 3px solid rgb(0, 49, 64); */
+  /* border-bottom: 3px solid rgb(8, 111, 143); */
+  /* width: 70px; */
   margin: 0 auto;
 }
-
+.rootCont > p {
+  font-size: 40px;
+  font-weight: 400;
+}
 .skillsCont {
   display: grid;
   grid-template-columns: repeat(5, 20%);
@@ -32,10 +40,39 @@
   align-items: center;
   width: 100px;
   margin: auto;
+  /* cursor: pointer; */
 }
 .skillIcon {
   font-size: 40px;
-  color: rgb(64, 112, 244);
+  /* color: rgb(64, 112, 244); */
+  color: rgb(8, 111, 143);
+}
+.reactIcon:hover {
+  color: rgb(94, 211, 243);
+}
+.reduxIcon:hover {
+  color: rgb(118, 76, 183);
+}
+.jsIcon:hover {
+  color: rgb(247, 223, 30);
+}
+.muiIcon:hover {
+  color: rgb(0, 129, 203);
+}
+.htmlIcon:hover {
+  color: rgb(233, 98, 40);
+}
+.cssIcon:hover {
+  color: rgb(37, 75, 221);
+}
+.nodeIcon:hover {
+  color: rgb(95, 151, 89);
+}
+.mongoIcon:hover {
+  color: rgb(82, 167, 75);
+}
+.gitIcon:hover {
+  color: rgb(232, 78, 49);
 }
 @media only screen and (max-width: 800px) {
   .rootCont {
