--- a/src/Components/Styles/ProjectsSection.module.css
+++ b/src/Components/Styles/ProjectsSection.module.css
@@ -82,7 +82,7 @@ a {
   font-size: 25px;
   font-weight: 400;
   margin: 0;
-  color: rgb(8, 111, 143);
+  /* color: rgb(8, 111, 143); */
 }
 .linkDiv {
   display: flex;
