--- a/src/Components/Styles/HeroSection.module.css
+++ b/src/Components/Styles/HeroSection.module.css
@@ -10,6 +10,9 @@
   height: 100vh;
   align-items: center;
 }
+a {
+  text-decoration: none;
+}
 .nameCont {
   grid-area: nameCont;
   width: 100%;
