fixed icon style

--- a/src/Components/Styles/HeroSection.module.css
+++ b/src/Components/Styles/HeroSection.module.css
@@ -44,6 +44,25 @@ a {
   align-items: center;
   justify-content: space-between;
 }
+.linkedInIcon {
+  font-size: 40px;
+  margin: 0 10px;
+  /* color: rgb(10, 102, 194); */
+  cursor: pointer;
+  color: rgb(8, 111, 143);
+}
+.linkedInIcon:hover {
+  color: rgb(17, 121, 224) !important;
+}
+.gitIcon {
+  font-size: 40px;
+  margin: 0 10px;
+  cursor: pointer;
+  color: rgb(42, 42, 42);
+}
+.gitIcon:hover {
+  color: rgb(80, 80, 80) !important;
+}
 .contactBtn {
   color: white;
   /* background-color: pink; */
