--- a/src/Components/Styles/ContactSection.module.css
+++ b/src/Components/Styles/ContactSection.module.css
@@ -1,12 +1,13 @@
 .rootCont {
   text-align: center;
-  height: 45vh;
+  /* height: 45vh; */
   background-color: black;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 10px;
 }
 a {
   text-decoration: none;
@@ -18,11 +19,13 @@ a {
 }
 .text {
   font-size: 20px;
+  margin: 10px;
 }
 .iconsCont {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 20px;
 }
 .linkedInIcon {
   font-size: 40px;
