--- a/src/Components/Styles/HeroSection.module.css
+++ b/src/Components/Styles/HeroSection.module.css
@@ -5,10 +5,11 @@
     "socialCont .";
   grid-template-columns: 50% 50%;
 
-  width: 80%;
+  width: 90%;
   margin: auto;
   height: 100vh;
   align-items: center;
+  justify-content: center;
 }
 a {
   text-decoration: none;
@@ -69,7 +70,7 @@ a {
 }
 .heroImg {
   width: 100%;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 @media only screen and (max-width: 800px) {
   .rootCont {
