--- a/src/Components/Styles/Navbar.module.css
+++ b/src/Components/Styles/Navbar.module.css
@@ -1,19 +1,83 @@
 .root {
-  display: flex;
+  /* display: flex; */
+  display: grid;
+  grid-template-columns: 50% 50%;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   position: fixed;
   top: 0;
-  border-bottom: 2px solid black;
+  /* border-bottom: 2px solid black; */
   width: 100%;
+  height: 50px;
+  background-color: white;
+  z-index: 1;
+  /* color: white; */
+  font-size: 18px;
+
+  font-weight: 500;
+  color: rgb(1, 75, 97);
+}
+a {
   height: 50px;
 }
 .navsCont {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, 20%);
   align-items: center;
-  justify-content: space-around;
-  width: 50%;
 }
 .nav {
   cursor: pointer;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  width: 50%;
+  /* border: 2px solid black; */
+  justify-content: center;
+}
+.nav:hover {
+  border-bottom: 5px solid rgb(0, 49, 64);
+}
+.navlogo {
+  cursor: pointer;
+  width: 70px;
+  /* padding-left: 25%; */
+  /* border: 2px solid black; */
+  text-align: center;
+  margin-left: 30%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 45px;
+}
+.navlogo:hover {
+  border-bottom: 5px solid rgb(0, 49, 64);
+}
+.logoimg {
+  height: 45px;
+  border-radius: 50%;
+}
+@media only screen and (max-width: 1024px) {
+  .root {
+    grid-template-columns: 20% 80%;
+  }
+  .navsCont {
+    justify-content: space-around;
+    /* padding-right: 10%; */
+  }
+  .nav {
+    height: 47px;
+    width: 100%;
+    /* border: 2px solid black; */
+  }
+  .navlogo {
+    height: 47px;
+    width: 50px;
+    /* border: 2px solid black; */
+  }
+  .nav:hover {
+    border-bottom: none;
+  }
+  .navlogo:hover {
+    border-bottom: none;
+  }
 }
