--- a/src/Components/Styles/SkillsSection.module.css
+++ b/src/Components/Styles/SkillsSection.module.css
@@ -1,37 +1,57 @@
 .rootCont {
-  height: 90vh;
+  /* height: 90vh; */
   width: 80%;
   margin: auto;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   justify-content: space-around;
-  padding-bottom: 10vh;
+  /* padding-bottom: 10vh; */
   text-align: center;
 }
 
 .rootCont h1 {
-  /* color: rgb(64, 112, 244); */
-  /* border-bottom: 3px solid rgb(64, 112, 244); */
-  /* color: rgb(8, 111, 143); */
   color: rgb(0, 49, 64);
-  /* border-bottom: 3px solid rgb(0, 49, 64); */
-  /* border-bottom: 3px solid rgb(8, 111, 143); */
-  /* width: 70px; */
+
   margin: 0 auto;
 }
 .rootCont > p {
+  font-size: 30px;
+  font-weight: 400;
+  color: rgb(8, 111, 143);
+  /* margin: 10; */
+}
+.rootCont > p:nth-of-type(1) {
   font-size: 40px;
   font-weight: 400;
+  color: black;
+  /* margin: 50px; */
 }
-.skillsCont {
+.skillsContFront {
   display: grid;
-  grid-template-columns: repeat(5, 20%);
+  grid-template-columns: repeat(6, 16.6%);
   justify-content: space-between;
   align-items: center;
-  /* border: 2px solid rgb(64, 112, 244); */
   border-radius: 10px;
-  height: 50vh;
+  margin-bottom: 50px;
+  /* height: 50vh; */
+}
+.skillsContBack {
+  display: grid;
+  grid-template-columns: repeat(3, 33.3%);
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  /* height: 50vh; */
+}
+.toolsDiv {
+  display: grid;
+  grid-template-columns: repeat(3, 33.3%);
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  /* height: 50vh; */
 }
 .skillCard {
   display: flex;
@@ -40,11 +60,14 @@
   align-items: center;
   width: 100px;
   margin: auto;
-  /* cursor: pointer; */
 }
 .skillIcon {
   font-size: 40px;
-  /* color: rgb(64, 112, 244); */
+  color: rgb(8, 111, 143);
+}
+.expSkillIcon {
+  font-size: 30px;
+  font-weight: 470;
   color: rgb(8, 111, 143);
 }
 .reactIcon:hover {
@@ -74,13 +97,19 @@
 .gitIcon:hover {
   color: rgb(232, 78, 49);
 }
+.expIcon {
+  margin: 0;
+}
+.expIcon:hover {
+  color: black;
+}
 @media only screen and (max-width: 1024px) {
-  .rootCont {
+  /* .rootCont {
     height: 140vh;
     padding-bottom: 5vh;
-  }
-  .skillsCont {
-    grid-template-columns: repeat(2, 50%);
-    height: 120vh;
+  } */
+  .skillsContFront {
+    grid-template-columns: repeat(3, 33.3%);
+    /* height: 120vh; */
   }
 }
