--- a/src/Components/Styles/Navbar.module.css
+++ b/src/Components/Styles/Navbar.module.css
@@ -1,17 +1,13 @@
 .root {
-  /* display: flex; */
   display: grid;
   grid-template-columns: 50% 50%;
   align-items: center;
-  /* justify-content: space-between; */
   position: fixed;
   top: 0;
-  /* border-bottom: 2px solid black; */
   width: 100%;
   height: 50px;
   background-color: white;
   z-index: 1;
-  /* color: white; */
   font-size: 20px;
 
   font-weight: 500;
@@ -31,7 +27,6 @@ a {
   display: flex;
   align-items: center;
   width: 50%;
-  /* border: 2px solid black; */
   justify-content: center;
 }
 .nav:hover {
@@ -40,8 +35,6 @@ a {
 .navlogo {
   cursor: pointer;
   width: 70px;
-  /* padding-left: 25%; */
-  /* border: 2px solid black; */
   text-align: center;
   margin-left: 10%;
   display: flex;
@@ -50,6 +43,15 @@ a {
   height: 45px;
 }
 .navlogo:hover {
+  border-bottom: 5px solid rgb(0, 49, 64);
+}
+.active > .nav {
+  border-bottom: 5px solid rgb(0, 49, 64);
+}
+.active > .navlogo {
+  border-bottom: 5px solid rgb(0, 49, 64);
+}
+.navlogo:active {
   border-bottom: 5px solid rgb(0, 49, 64);
 }
 .logoimg {
@@ -63,18 +65,15 @@ a {
   }
   .navsCont {
     justify-content: space-around;
-    /* padding-right: 10%; */
   }
   .nav {
     height: 47px;
     width: 100%;
-    /* border: 2px solid black; */
   }
   .navlogo {
     height: 47px;
     width: 50px;
     margin-left: 5%;
-    /* border: 2px solid black; */
   }
   .nav:hover {
     border-bottom: none;
