--- a/src/Components/Styles/ProjectsSection.module.css
+++ b/src/Components/Styles/ProjectsSection.module.css
@@ -48,9 +48,11 @@ a {
 .image {
   border-radius: 5px;
   width: 100%;
+  height: 250px;
   border-bottom: 1px solid rgb(224, 224, 224);
   margin: auto;
   cursor: pointer;
+  object-fit: cover;
 }
 .info {
   display: flex;
@@ -101,7 +103,7 @@ a {
 .projInfo {
   width: 80%;
   margin: auto;
-  text-align: center;
+  text-align: left;
 }
 .projInfo > p {
   font-size: 17px;
