--- a/src/Components/Styles/ProjectsSection.module.css
+++ b/src/Components/Styles/ProjectsSection.module.css
@@ -36,6 +36,7 @@ a {
 .projectCont {
   width: 100%;
   margin: auto;
+  /* height: 30vw; */
   border-radius: 5px;
   text-align: center;
   box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
@@ -48,7 +49,7 @@ a {
 .image {
   border-radius: 5px;
   width: 100%;
-  height: 250px;
+  height: 50%;
   border-bottom: 1px solid rgb(224, 224, 224);
   margin: auto;
   cursor: pointer;
@@ -104,6 +105,7 @@ a {
   width: 80%;
   margin: auto;
   text-align: left;
+  overflow: hidden;
 }
 .projInfo > p {
   font-size: 17px;
@@ -115,6 +117,7 @@ a {
   }
   .projectCont {
     width: 80%;
+    /* height: 150px; */
     margin: 30px auto;
   }
   .projectGrid {
