--- a/src/Components/Styles/AboutSection.module.css
+++ b/src/Components/Styles/AboutSection.module.css
@@ -1,5 +1,5 @@
 .rootCont {
-  width: 70%;
+  width: 60%;
   margin: auto;
   text-align: center;
   height: 90vh;
@@ -9,11 +9,7 @@
   padding-bottom: 10vh;
 }
 .rootCont h1 {
-  /* color: rgb(64, 112, 244); */
-  /* border-bottom: 3px solid rgb(64, 112, 244); */
-  /* color: rgb(8, 111, 143); */
   color: rgb(0, 49, 64);
-  /* border-bottom: 3px solid rgb(8, 111, 143); */
   width: 95px;
   margin: 0 auto;
 }
@@ -23,7 +19,8 @@
 }
 .mainCont {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 30% 60%;
+  gap: 10%;
   color: rgb(14, 36, 49);
   font-size: 20px;
 }
@@ -37,14 +34,12 @@
 .mainCont > div > h2 {
   margin: 0px;
 }
-/* .mainCont > div > h2 > span {
-  color: rgb(8, 111, 143);
-} */
+
 .profilePicCont {
-  /* background-color: rgb(194, 195, 201); */
 }
 .profilePic {
-  width: 70%;
+  text-align: right;
+  width: 100%;
   margin: auto;
   /* border: 2px solid black; */
   background-color: rgb(194, 195, 201);
