--- a/src/Components/Styles/HeroSection.module.css
+++ b/src/Components/Styles/HeroSection.module.css
@@ -5,8 +5,8 @@
     "socialCont .";
   grid-template-columns: 50% 50%;
 
-  width: 90%;
-  margin: auto;
+  width: 80%;
+  margin: 20px auto;
   height: 100vh;
   align-items: center;
   justify-content: center;
