--- a/src/Components/Styles/AboutSection.module.css
+++ b/src/Components/Styles/AboutSection.module.css
@@ -46,6 +46,9 @@
   border-radius: 10px;
 }
 @media only screen and (max-width: 1024px) {
+  .rootCont {
+    width: 90%;
+  }
   .mainCont {
     display: flex;
     flex-direction: column;
@@ -55,5 +58,8 @@
   }
   .profilePicCont {
     padding: 30px;
+  }
+  .profilePic {
+    width: 60%;
   }
 }
