--- a/src/Components/Styles/ProjectsSection.module.css
+++ b/src/Components/Styles/ProjectsSection.module.css
@@ -36,7 +36,7 @@ a {
 .projectCont {
   width: 100%;
   margin: auto;
-  /* height: 30vw; */
+  height: 500px;
   border-radius: 5px;
   text-align: center;
   box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
@@ -49,7 +49,7 @@ a {
 .image {
   border-radius: 5px;
   width: 100%;
-  height: 50%;
+  height: 55%;
   border-bottom: 1px solid rgb(224, 224, 224);
   margin: auto;
   cursor: pointer;
@@ -119,6 +119,7 @@ a {
     width: 90%;
     /* height: 150px; */
     margin: 30px auto;
+    height: auto;
   }
   .projectGrid {
     display: flex;
