added more projects

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ a {
   width: 100%;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -41,4 +41,4 @@ a {
   to {
     transform: rotate(360deg);
   }
-}
+} */
