--- a/src/Components/Styles/ProjectsSection.module.css
+++ b/src/Components/Styles/ProjectsSection.module.css
@@ -4,8 +4,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* min-height: 100vh; */
-  padding-bottom: 80px;
 }
 .projectsSectionCont h1 {
   color: rgb(0, 49, 64);
@@ -29,8 +27,9 @@ a {
 .projectGrid {
   display: grid;
   grid-template-columns: 40% 40%;
-  gap: 5%;
+  gap: 70px 5%;
   justify-content: center;
+  padding-bottom: 30px;
 }
 /*project card*/
 .projectCont {
@@ -124,6 +123,7 @@ a {
   .projectGrid {
     display: flex;
     flex-direction: column;
+    gap: 5%;
   }
   .projInfo {
     display: none;
