--- a/src/Components/Styles/Navbar.module.css
+++ b/src/Components/Styles/Navbar.module.css
@@ -81,4 +81,10 @@ a {
   .navlogo:hover {
     border-bottom: none;
   }
+  .active > .nav {
+    border-bottom: none;
+  }
+  .active > .navlogo {
+    border-bottom: none;
+  }
 }
