--- a/src/Components/Styles/Navbar.module.css
+++ b/src/Components/Styles/Navbar.module.css
@@ -45,15 +45,15 @@ a {
 .navlogo:hover {
   border-bottom: 5px solid rgb(0, 49, 64);
 }
-.active > .nav {
+/* .active > .nav {
   border-bottom: 5px solid rgb(0, 49, 64);
 }
 .active > .navlogo {
   border-bottom: 5px solid rgb(0, 49, 64);
-}
-.navlogo:active {
+} */
+/* .navlogo:active {
   border-bottom: 5px solid rgb(0, 49, 64);
-}
+} */
 .logoimg {
   height: 60px;
   border-radius: 50%;
